--- a/templates/config.html
+++ b/templates/config.html
@@ -153,6 +153,16 @@
                                                 Enable Screenshot Monitoring
                                             </label>
                                         </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input"
+                                                type="checkbox"
+                                                id="enableCamera"
+                                                name="features.camera">
+                                            <label class="form-check-label"
+                                                for="enableCamera">
+                                                Enable Camera Monitoring
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -357,6 +367,7 @@ function loadConfig() {
                 setChecked('features.mouse_logging', cfg.features.mouse_logging ?? cfg.features.mouse);
                 setChecked('features.clipboard_monitoring', cfg.features.clipboard_monitoring ?? cfg.features.clipboard);
                 setChecked('features.screenshot_monitoring', cfg.features.screenshot_monitoring ?? cfg.features.screenshots);
+                setChecked('features.camera', cfg.features.camera ?? (cfg.camera && cfg.camera.enabled));
             }
 
             // Privacy
